Modify index template

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,12 @@
-Here are some radios that can be played.
+<div class="pure-u-1">
+  <div>
+    <h2 class="text-center">Ember radio</h2>
 
-{{#link-to 'radio'}}Play dj radio{{/link-to}}
-{{outlet}}
+    <form class="text-center pure-form pure-form-aligned">
+      {{input value=radio_url placeholder="Copy radio URL..."}}
+      <button class="pure-button">Create</button>
+    </form>
+
+    <button class="pure-button">Play</button>
+  </div>
+</div>
