--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,17 +2,6 @@
   <div>
     <h2 class="text-center">Ember radio</h2>
 
-    <form class="text-center pure-form pure-form-aligned">
-      {{input value=model.radio_url placeholder="Copy radio URL..."}}
-      <button class="pure-button">Create radio!</button>
-    </form>
-
-    {{#if model._audio }}
-      {{#if model.isPlaying}}
-        <button class="pure-button">Stop</button>
-      {{else}}
-        <button class="pure-button">Play</button>
-      {{/if}}
-    {{/if}}
+    {{audio-player}}
   </div>
 </div>
