--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,3 +5,10 @@ div[class^="pure-u"] > * {
 .text-center {
     text-align: center;
 }
+
+.button-error {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    background-color: #BF3A3A;
+}
