Modify audio error message

--- a/app/templates/components/audio-player.hbs
+++ b/app/templates/components/audio-player.hbs
@@ -20,7 +20,7 @@
 
 {{#if error}}
   <p>Unable to play "{{radio_url}}"
-    <button {{action "clear"}} class="pure-button">Ok</button>
+    <button {{action "clear"}}><i class="fa fa-times-circle"></i></button>
   </p>
 {{/if}}
 
