--- a/app/templates/components/audio-player.hbs
+++ b/app/templates/components/audio-player.hbs
@@ -1,42 +1,50 @@
-<form class="text-center pure-form pure-form-aligned">
-  {{input value=radio_url placeholder="Copy radio URL..." autofocus="autofocus"}}
+<div class="pure-u-1-3">
+  <div>
+    <form class="text-center pure-form pure-form-aligned">
+      {{input value=radio_url placeholder="Copy radio URL..."
+        autofocus="autofocus"}}
+      <br>
+      {{#if radio_url}}
+        <button class="pure-button"
+                {{action "initRadio" preventDefault=true}}>Create radio!</button>
 
-  {{#if radio_url}}
-    <button class="pure-button"
-            {{action "initRadio" preventDefault=true}}>Create radio!</button>
+        {{#if audio}}
+          <button class="pure-button"
+                {{action "clear" preventDefault=true}}>Clear</button>
+        {{/if}}
+      {{/if}}
+      <p>Copy any radio URL or audio URL and EmberAudio will attempt to play the
+        audio.
+        <small>* For Shoutcast URLs add "/;" after the port if your browser is
+          not able to play the stream
+        </small>
+      </p>
+    </form>
+  </div>
+</div>
+
+<div class="pure-u-2-3">
+  <div>
+    {{#if error}}
+      <p>Unable to play "{{radio_url}}"
+        <button {{action "clear"}}><i class="fa fa-times-circle"></i></button>
+      </p>
+    {{/if}}
 
     {{#if audio}}
-      <button class="pure-button"
-            {{action "clear" preventDefault=true}}>Clear</button>
-    {{/if}}
-  {{/if}}
-  <div>
-    <small>
-      * For Shoutcast URLs add "/;" after the port if your browser is not
-      able to play the stream
-    </small>
-  </div>
-</form>
-
-{{#if error}}
-  <p>Unable to play "{{radio_url}}"
-    <button {{action "clear"}}><i class="fa fa-times-circle"></i></button>
-  </p>
-{{/if}}
-
-{{#if audio}}
-  <hr>
-  {{#if isPlaying}}
-    <p>
-      <button class="pure-button button-error" {{action "stop"}}>Stop</button>
-      {{#if isBuffering}}
-        Buffering...
+      {{#if isPlaying}}
+        <p>
+          <button class="pure-button button-error" {{action "stop"}}>Stop</button>
+          {{#if isBuffering}}
+            Buffering...
+          {{else}}
+            Playing radio .  . .
+          {{/if}}
+          Volume: {{audio.volume}}
+        </p>
       {{else}}
-        Playing radio .  . .
+        <p><button class="pure-button" {{action "play"}}>Play</button> Stopped</p>
       {{/if}}
-      Volume: {{audio.volume}}
-    </p>
-  {{else}}
-    <p><button class="pure-button" {{action "play"}}>Play</button> Stopped</p>
-  {{/if}}
-{{/if}}
+    {{/if}}
+  </div>
+</div>
