Icons for play and stop

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,3 +12,7 @@ div[class^="pure-u"] > * {
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     background-color: #BF3A3A;
 }
+
+.controls {
+    cursor: pointer;
+}
