--- a/app/templates/components/audio-player.hbs
+++ b/app/templates/components/audio-player.hbs
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<div class="pure-u-2-3">
+<div class="pure-u-1-3">
   <div>
     {{#if error}}
       <p>Unable to play "{{radio_url}}"
@@ -33,17 +33,17 @@
 
     {{#if audio}}
       {{#if isPlaying}}
+        <p><i class="controls fa fa-stop fa-4x" {{action "stop"}}></i></p>
         <p>
-          <button class="pure-button button-error" {{action "stop"}}>Stop</button>
           {{#if isBuffering}}
             Buffering...
           {{else}}
             Playing radio .  . .
           {{/if}}
-          Volume: {{audio.volume}}
         </p>
       {{else}}
-        <p><button class="pure-button" {{action "play"}}>Play</button> Stopped</p>
+        <p><i class="controls fa fa-play fa-4x" {{action "play"}}></i></p>
+        <p>Stopped</p>
       {{/if}}
     {{/if}}
   </div>
