Add EventListeners for interesting events
* Fetch and display duration and currentTime for audio

--- a/app/templates/components/audio-player.hbs
+++ b/app/templates/components/audio-player.hbs
@@ -48,3 +48,12 @@
     {{/if}}
   </div>
 </div>
+
+<div class="pure-u-1-3">
+  <div>
+    {{#if audio}}
+      <p>Duration: {{totalTime}}</p>
+      <p>Time: {{currentTime}} s</p>
+    {{/if}}
+  </div>
+</div>
