--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <div class="pure-u-1">
   <div>
-    <h2 class="text-center">Ember HTML5 Audio</h2>
+    <h2 class="text-center">HTML5 Radio</h2>
   </div>
 </div>
 
